# CCollectionsCore

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  vector.c
src/include/: common.h  vector.h
tests/: CMakeLists.txt  temp.c  vector_tests.cpp
